# peps-team

./: .env  .env.example  .gitignore  01-rutinas.sql  01-rutinas.sql.bak  Chuches.sql  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pipeline  pipeline2  prueba.txt  pyproject.toml  requirements.txt  soul
.scannerwork/: report-task.txt
apache/: Dockerfile  demo.apache.conf
apache/html/: comentarios.html  index.html  miperfil.html
apache/static/: agregar_chuche.html  chuches.html  comentarios.html  editar_chuche.html  index.html
api/db/: rutinas.sql
api/web/: app.py  bd.py  calculariva.py  controlador_chuches.py  controlador_comentarios.py  controlador_ficheros.py  controlador_rutinas.py  controlador_usuarios.py  otpgen.py  requirements.txt  rutas_auth.py  rutas_chuches.py  rutas_comentarios.py  rutas_ejercicios.py  rutas_ficheros.py  rutas_rutinas.py  rutas_usuarios.py  test_calculariva.py  variables.py
auditoria/A entregar/: Informe_Auditoria_PepsTeam.docx  WSTG_Checklist_PepsTeam.xlsx  pipeline_doc(TerminarEnClase).odt
auditoria/lfi/: click.html  csrf_test.html  foto_rutina.html  payload3.html
config/: settings.yaml
config/profiles/: default.yaml  pentester.yaml  programmer.yaml  sysadmin.yaml
dante/: __init__.py  core.py  main.py  memory.py  session.py
dante/providers/: __init__.py  anthropic_p.py  base.py  gemini_p.py  openai_p.py
dante/tools/: files.py  network.py  (+3 more)
db/: rutinas.sql
kubernetes/: apache.yml  mariadb.yml  novale.yml  python.yml  secrets.yml  serviceApache.yml  servicePython.yml  volumen.yml
tests/: e2e_test.py
(+6 files in other folders)
